Measure Text code WIP

--- a/Raylib-Pallanguzhi/Makefile
+++ b/Raylib-Pallanguzhi/Makefile
@@ -7,7 +7,7 @@ LDFLAGS = -lraylib -lGL -lm -lpthread -ldl -lrt -lX11 -L/usr/local/lib -lfreetyp
 TARGET = Game
 
 # Source files
-SRC = src/Game.c src/Board.c src/SlotSelector.c src/Queue.c src/Array.c src/MainMenu.c src/EndScreen.c src/SaveData.c src/Button.c src/Translation.c src/LanguageSelection.c src/TamilText.c
+SRC = src/Game.c src/Board.c src/SlotSelector.c src/Queue.c src/Array.c src/MainMenu.c src/EndScreen.c src/SaveData.c src/Button.c src/Translation.c src/LanguageSelection.c src/TamilText.c src/TextRender.c
 
 # Object files
 OBJ = $(SRC:.c=.o)
