--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Raylib-Pallanguzhi/app/src/main/cpp/deps/harfbuzz"]
 	path = Raylib-Pallanguzhi/app/src/main/cpp/deps/harfbuzz
 	url = https://github.com/harfbuzz/harfbuzz.git
+[submodule "Raylib-Pallanguzhi/app/src/main/cpp/deps/raylib"]
+	path = Raylib-Pallanguzhi/app/src/main/cpp/deps/raylib
+	url = https://github.com/raysan5/raylib.git
