--- a/Raylib-Pallanguzhi/app/src/main/cpp/CMakeLists.txt
+++ b/Raylib-Pallanguzhi/app/src/main/cpp/CMakeLists.txt
@@ -39,7 +39,7 @@ endif()
 
 # Include raylib and raymob header files
 target_include_directories(${APP_LIB_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/deps/raylib/src")
-target_include_directories(${APP_LIB_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/deps/raymob/src")
+target_include_directories(${APP_LIB_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/deps/raymob")
 target_include_directories(${APP_LIB_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/deps/freetype/include")
 target_include_directories(${APP_LIB_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/deps/harfbuzz/src")
 
