--- a/Raylib-Pallanguzhi/app/src/main/Makefile
+++ b/Raylib-Pallanguzhi/app/src/main/Makefile
@@ -1,13 +1,13 @@
 # Compiler and flags
 CC = gcc
 CFLAGS = -Wall -std=c99 -I/usr/local/include/freetype2 -I/usr/local/include/harfbuzz
-LDFLAGS = -lraylib -lGL -lm -lpthread -ldl -lrt -lX11 -L/usr/local/lib -lfreetype -lharfbuzz
+LDFLAGS = -lraylib -lGL -lm -lpthread -ldl -lrt -lX11 -L/usr/local/lib -lfreetype -lharfbuzz -lczmq
 
 # Output file
 TARGET = Game
 
 # Source files
-SRC = cpp/Game.c cpp/Board.c cpp/SlotSelector.c cpp/Queue.c cpp/Array.c cpp/MainMenu.c cpp/EndScreen.c cpp/SaveData.c cpp/Button.c cpp/Translation.c cpp/LanguageSelection.c cpp/TamilText.c cpp/TextRender.c
+SRC = cpp/Game.c cpp/Board.c cpp/SlotSelector.c cpp/Queue.c cpp/Array.c cpp/MainMenu.c cpp/EndScreen.c cpp/SaveData.c cpp/Button.c cpp/Translation.c cpp/LanguageSelection.c cpp/TamilText.c cpp/TextRender.c cpp/Client.c
 
 # Object files
 OBJ = $(SRC:.c=.o)
