--- a/Raylib-Pallanguzhi/app/src/main/cpp/CMakeLists.txt
+++ b/Raylib-Pallanguzhi/app/src/main/cpp/CMakeLists.txt
@@ -16,9 +16,50 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/deps/harfbuzz)
 add_subdirectory(${CMAKE_SOURCE_DIR}/deps/raylib)
 add_subdirectory(${CMAKE_SOURCE_DIR}/deps/raymob)
 
-# Fetch all source files for your project (recursively), excluding 'deps' source files
-file(GLOB_RECURSE SOURCES "${CMAKE_SOURCE_DIR}/*.c" "${CMAKE_SOURCE_DIR}/*.cpp")
-list(FILTER SOURCES EXCLUDE REGEX "${CMAKE_SOURCE_DIR}/deps/.*")
+# --- libzmq + czmq: use pre-built static libraries from czmq's builds/android ---
+set(CZMQ_PREFIX ${CMAKE_SOURCE_DIR}/deps/zeromq/czmq/builds/android/prefix)
+
+# Map Android ABI to the folder name the build script uses
+if(ANDROID_ABI STREQUAL "arm64-v8a")
+    set(ZMQ_ARCH_DIR ${CZMQ_PREFIX}/arm64)
+elseif(ANDROID_ABI STREQUAL "armeabi-v7a")
+    set(ZMQ_ARCH_DIR ${CZMQ_PREFIX}/arm)
+elseif(ANDROID_ABI STREQUAL "x86_64")
+    set(ZMQ_ARCH_DIR ${CZMQ_PREFIX}/x86_64)
+elseif(ANDROID_ABI STREQUAL "x86")
+    set(ZMQ_ARCH_DIR ${CZMQ_PREFIX}/x86)
+endif()
+
+# Import pre-built libzmq
+add_library(zmq STATIC IMPORTED)
+set_target_properties(zmq PROPERTIES
+    IMPORTED_LOCATION ${ZMQ_ARCH_DIR}/lib/libzmq.a
+)
+
+# Import pre-built libczmq
+add_library(czmq STATIC IMPORTED)
+set_target_properties(czmq PROPERTIES
+    IMPORTED_LOCATION ${ZMQ_ARCH_DIR}/lib/libczmq.a
+)
+# --------------------------------------------------------------
+
+# Explicitly list source files (all .c files in the cpp directory)
+set(SOURCES
+    ${CMAKE_SOURCE_DIR}/Array.c
+    ${CMAKE_SOURCE_DIR}/Board.c
+    ${CMAKE_SOURCE_DIR}/Button.c
+    ${CMAKE_SOURCE_DIR}/Client.c
+    ${CMAKE_SOURCE_DIR}/EndScreen.c
+    ${CMAKE_SOURCE_DIR}/Game.c
+    ${CMAKE_SOURCE_DIR}/LanguageSelection.c
+    ${CMAKE_SOURCE_DIR}/MainMenu.c
+    ${CMAKE_SOURCE_DIR}/Queue.c
+    ${CMAKE_SOURCE_DIR}/SaveData.c
+    ${CMAKE_SOURCE_DIR}/SlotSelector.c
+    ${CMAKE_SOURCE_DIR}/TamilText.c
+    ${CMAKE_SOURCE_DIR}/TextRender.c
+    ${CMAKE_SOURCE_DIR}/Translation.c
+)
 
 # Add headers directory for android_native_app_glue.c
 include_directories(${ANDROID_NDK}/sources/android/native_app_glue/)
@@ -42,6 +83,7 @@ target_include_directories(${APP_LIB_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/deps/ray
 target_include_directories(${APP_LIB_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/deps/raymob")
 target_include_directories(${APP_LIB_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/deps/freetype/include")
 target_include_directories(${APP_LIB_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/deps/harfbuzz/src")
+target_include_directories(${APP_LIB_NAME} PRIVATE "${ZMQ_ARCH_DIR}/include")
 
 # Link required libraries to the native application
 # Order matters: dependencies should come after the libraries that depend on them
@@ -50,6 +92,8 @@ target_link_libraries(${APP_LIB_NAME}
     raymoblib
     freetype
     harfbuzz
+    czmq
+    zmq
     log
     android
     EGL
